# AutoFlow

./: .cursorrules  .gitignore  CLAUDE.md  README.md  pyproject.toml  ux enhancements.md
autoflow/: __init__.py  __main__.py  config.py  main.py
autoflow/actions/: base.py  calendar_check.py  conditional.py  notify.py  open_app.py  open_url.py  run_command.py
autoflow/api/: app.py  database.py  system_context.py
autoflow/api/routes/: ai.py  execution.py  logs.py  workflows.py
autoflow/db/: models.py
autoflow/engine/: __init__.py  context.py  executor.py  middleware.py  registry.py  workflow.py
autoflow/services/: workflow_service.py
autoflow/triggers/: login.py  scheduler.py
dashboard/: app.js  index.css  index.html
docs/: index.html  install.sh  script.js  style.css
tests/: test_bug_fixes.py
